<resources>
    <string name="app_name">Praassessment Azzam</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ke_menu_dua">Ke Menu Dua</string>
    <string name="ke_menu_satu">Ke Menu Satu</string>
    <string name="pemesanan_makanan">Pemesanan Makanan</string>
    <string name="kue">Kue</string>
    <string name="Plus">+</string>
    <string name="minus">-</string>
    <string name="rasa">Rasa</string>
    <string name="icecream">IceCream</string>
    <string name="icecream2">IceCream</string>
    <string name="ceres">Ceres</string>
    <string name="coklat">Coklat</string>
    <string name="strawberry">Strawberry</string>
    <string name="nama_pembeli">Nama Pembeli</string>
    <string name="nama_pembeli2">Nama Pembeli</string>
    <string name="beli">Beli</string>
    <string name="reset">Reset</string>
    <string name="_0">0</string>
    <string name="pembeli">Pembeli</string>
    <string name="kue_apa">Kue</string>
    <string name="harga">Harga</string>
    <string name="share">Share</string>
</resources>
